Delivery_exercise_3/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deploy
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: michelecrapuzzi/php_service
          ports:
            - containerPort: 80
